--- a/.mybashrc
+++ b/.mybashrc
@@ -1,10 +1,13 @@
+### cd to bashrc folder
+cd ~/.bashrc.d
+
 ### Include extra plugins
-if [ -f ~/.bashrc.d/bash_plugins.bash ] ; then
-   source .bashrc.d/bash_plugins.bash
+if [ -f bash_plugins.bash ] ; then
+   source bash_plugins.bash
 fi
 
 
 ### Include personal alias
-if [ -f ~/.bashrc.d/bash_alias.bash ] ; then
-   source ~/.bashrc.d/bash_alias.bash
+if [ -f bash_alias.bash ] ; then
+   source bash_alias.bash
 fi
