config: Remember to return previous folder

--- a/.mybashrc
+++ b/.mybashrc
@@ -1,4 +1,5 @@
 ### cd to bashrc folder
+prewd=`pwd`
 cd ~/.bashrc.d
 
 ### Include extra plugins
@@ -11,3 +12,7 @@ fi
 if [ -f bash_alias.bash ] ; then
    source bash_alias.bash
 fi
+
+
+### Return to previous folder
+cd $prewd
